# margin-walker

./: .gitignore  Justfile  MACROS.md  README.md  TOOLS.md  pyproject.toml
ableton-config/: invariants.txt
ableton_adk/: __init__.py  run_task.py
ableton_adk/agents/: __init__.py  composer.py  mixer.py  producer.py
ableton_adk/lib/: __init__.py  osc_client.py
ableton_adk/prompts/: __init__.py  composer.py  invariants.py  mixer.py  producer.py
ableton_adk/tools/: __init__.py  clip.py  device.py  mixer.py  scene.py  song.py  track.py  transport.py
ableton_adk/tui/: __init__.py  app.py  app.tcss  commands.py  macros.py
ableton_adk/tui/agents/: __init__.py  base.py  default.py  llm.py
ableton_adk/tui/widgets/: command_input.py  status_bar.py
docs/: 01-remote-script-api.md  02-ableton-osc.md  03-ableton-link.md  04-midi-control.md  05-max-for-live.md  06-ableton-js.md  07-python-libraries.md  08-ai-agents-ableton.md  09-tui-research.md
